<resources>
    <string name="app_name">BPDLH App</string>
    <string name="version_name">Version %s</string>
    <string name="label_login_perorangan">FDB Perorangan</string>
    <string name="label_login_subtitle">Silakan login untuk mengakses semua fitur!</string>
    <string name="label_login">Login</string>
    <string name="label_email_nik">Email/NIK</string>
    <string name="label_email_address">Alamat Email</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_input_email">Masukkan Alamat Email Akun Anda</string>
    <string name="hint_input_password">Masukkan Password Akun Anda</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_forgot_password">Lupa Password</string>
    <string name="btn_register">Daftar</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_finalisasi_registrasi">Finalisasi Registrasi</string>
    <string name="label_email_not_registered">Maaf Alamat Email yang Anda Masukkan Tidak Terdaftar</string>
    <string name="label_email_empty">Masukkan Alamat Email untuk Login akun anda</string>
    <string name="label_email_wrong_format">Harap masukkan format Alamat Email yang sesuai</string>
    <string name="label_access_not_allowed">Anda tidak memiliki akses mobile fulfillment</string>
    <string name="label_pass_empty">Masukkan Password untuk Login akun anda</string>
    <string name="label_login_failed">Login Gagal harap periksa kembali email &amp; password login anda</string>
    <string name="label_email_pass_empty">Masukkan Alamat Email &amp; Password untuk Login akun anda</string>
    <string name="label_pass_wrong_format">Harap masukkan format password yang sesuai</string>
    <string name="label_pass_less_then_six">Panjang password minimal 6 karakter</string>
    <string name="label_empty_detail_report">Detail laporan belum dapat ditampilkan.</string>
    <string name="label_check_phone">Nomor Telepon Pemilik sama dengan Customer</string>
    <string name="label_pass_not_same">Password tidak sama</string>
    <string name="profile">Profile</string>
    <string name="name_profil">Olivia Rhye</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="logout">Logout</string>
    <string name="ubah_akun_saya">Ubah Akun Saya</string>
    <string name="nama_lembaga">Nama Lembaga</string>
    <string name="lembaga_hint">Lembaga A</string>
    <string name="e_mail">E-mail</string>
    <string name="sk_pembentukan_berita_acara">SK Pembentukan atau berita acara pembentukan</string>
    <string name="nomor_npwp">Nomor NPWP</string>
    <string name="email_address">lembaga@gmail.com</string>
    <string name="negara">Negara</string>
    <string name="informasi_narahubung">Informasi Narahubung</string>
    <string name="nama_narahubung">Nama Narahubung</string>
    <string name="jabatan">Jabatan</string>
    <string name="telepon">Telepon</string>
    <string name="berhasil_edit">Berhasil menyimpan perubahan</string>
    <string name="kata_sandi_sekarang">Kata Sandi Sekarang</string>
    <string name="masukan_kata_sandi_sekarang">Masukan Kata Sandi Sekarang</string>
    <string name="label_pass_less_then_eight">Panjang password minimal 8 karakter</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="masukkan_kata_sandi_baru">Masukkan Kata Sandi Baru</string>
    <string name="ulangi_kata_sandi_baru">Ulangi Kata Sandi Baru</string>
    <string name="ya_keluar">Ya, Keluar</string>
    <string name="apakah_anda_yakin_akan_keluar_dari_aplikasi">Apakah Anda yakin akan Keluar dari Aplikasi?</string>
    <string name="keluar_dari_aplikasi_berarti_anda_berhenti_mengakses_aplikasi_dan_harus_login_kembali">Keluar dari aplikasi berarti Anda berhenti mengakses aplikasi dan harus login kembali</string>
    <string name="company_label">Company</string>
    <string name="name_label">Nama</string>
    <string name="sales_label">Sales Person</string>
    <string name="email_label">Email</string>
    <string name="phone_label">No HP</string>
    <string name="product_label">Produk</string>
    <string name="product_info_label">Info Lengkap Produk</string>
    <string name="default_company">Company Sales</string>
    <string name="approved_button">Setuju</string>
    <string name="dismissed_button">Batal</string>
    <string name="txt_phone_default">08123456789</string>
    <string name="txt_name_default">Cahyo Supratman</string>
    <string name="txt_email_default">mascahyo31@gmail.com</string>
    <string name="txt_confirmation">Konfirmasi</string>
    <string name="btn_yes">Ya</string>
    <string name="warning_no_connection">Ups. Tidak Ada Koneksi Internet</string>
    <string name="default_warning_no_connection">Unable to resolve host</string>
    <string name="btn_try_again">COBA LAGI</string>
    <string name="general_action_edit">Edit</string>
    <string name="general_action_delete">Delete</string>
    <string name="general_action_title">Action</string>
    <string name="forget_password_label_title">Lupa Kata Sandi</string>
    <string name="forget_password_button_send">Kirim</string>
    <string name="forget_password_button_back_to_login">Kembali ke Login</string>
    <string name="forget_password_instruction">*Kami akan mengirim tautan untuk mengatur ulang kata sandi Anda.</string>
    <string name="forget_password_instruction_update_password">Link password baru akun Anda telah terkirim. Periksa inbox email Anda dan silahkan login kembali dengan link yang dikirimkan.</string>
    <string name="forget_password_finish">Selesai</string>
    <string name="forget_password_close">Kembali</string>
    <string name="update_password_label_title">Ubah Kata Sandi </string>
    <string name="update_password_instruction">*Masukkan kata sandi baru anda untuk mengatur ulang kata sandi anda</string>
    <string name="update_password_password_instruction">*Kata Sandi harus 8 Karakter (Minimal 1 huruf Kapital Dan 1 Angka)</string>
    <string name="update_password_label_password">Kata Sandi</string>
    <string name="update_password_rules">*Kata sandi harus 8 karakter (minimal 1 huruf kapital dan 1 angka)</string>
    <string name="update_password_label_password_confirm">Konfirmasi Kata Sandi</string>
    <string name="update_password_button_send">Kirim</string>
    <string name="update_password_hint_input_password">Masukkan password baru akun Anda</string>
    <string name="update_password_failed_message">Maaf, Anda belum berhasil mengatur password Anda. \nSilahkan coba lagi.</string>
    <string name="update_password_failed_close">COBA LAGI</string>
    <string name="update_password_success_message">Selamat, Anda telah berhasil mengatur password Anda. \nSilahkan tutup halaman ini.</string>
    <string name="update_password_success_close">OK</string>
    <string name="update_password_dialog_message_title">Atur Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_profil">Profil</string>
    <string name="txt_lengkapi_dokumen">Lengkapi Dokumen di bawah</string>
    <string name="txt_lengkapi_dokumen_message">Anda bisa upload Formulir Pendaftaran Kelompok jika semua dokumen kategori dibawah ini sudah dilengkapi!.</string>
    <string name="pendaftaran_kelompok">Pendaftaran Kelompok</string>
    <string name="pendaftaran_perorangan">Pendaftaran Perorangan</string>
    <string name="upload_semua_persyaratan">Upload Semua Persyaratan</string>
    <string name="layanan_lain">Layanan Lainnya</string>
    <string name="pengajuan_daftar_permohonan">Pengajuan Daftar Permohonan</string>
    <string name="txt_permohonan_pembiayaan">Permohonan Pembiayaan</string>
    <string name="txt_penawaran">Penawaran</string>
    <string name="txt_perjanjian">Perjanjian</string>
    <string name="txt_permohonan_pencairan">Permohonan Pencairan</string>
    <string name="txt_pencairan">Pencairan</string>
    <string name="ticker_title_dalam_proses_pengkajian">Dalam Proses Pengkajian</string>
    <string name="ticker_message_dalam_proses_pengkajian">Formulir Pendaftaran Kelompok berhasil diupload dan dalam proses pengkajian, harap menunggu dan selalu mengecek status yang ada ditiap kategori penilaian.</string>
    <string name="ticker_title_kembali_upload_persyaratan">Kembali Upload Persyaratan</string>
    <string name="ticker_message_kembali_upload_persyaratan">Setelah proses mengubah data yang ditolak harap kembali mengupload persyaratan.</string>
    <string name="status_draft">Draft</string>
    <string name="status_data_belum_lengkap">Data Belum Lengkap</string>
    <string name="status_menunggu_verifikasi">Menunggu Verifikasi</string>
    <string name="status_ditolak">Ditolak</string>
    <string name="status_disetujui">Disetujui</string>
    <string name="status_data_sudah_dilengkapi">Data Sudah Dilengkapi</string>
    <string name="self_assesment_title">Self Assesment</string>
    <string name="self_assesment_desc">Lorem ipsum dolor sit amet consectetur. Malesuada ultrices enim feugiat adipiscing cursus enim.</string>
    <string name="self_assesment_start">Mulai Assesment</string>
    <string name="self_assesment_badge_warning">Data Belum Lengkap</string>
    <string name="self_assesment_button_finish">Lihat Detail</string>
    <string-array name="description">
        <item>Data Calon Debitur</item>
        <item>Data Pasangan</item>
        <item>Alamat</item>
        <item>Informasi Keuangan</item>
        <item>Dokumen Legalitas</item>
    </string-array>
    <string name="wajib_upload_ktp">Wajib Upload KTP</string>
    <string name="wajib_upload_kk">Wajib Upload KK</string>
    <string name="wajib_di_isi">Wajib diisi</string>
    <string name="jenis_kelamin_debitur">Jenis Kelamin Debitur</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="lokasi_tidak_ditemukan">Lokasi tidak ditemukan. Coba Lagi</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="wajib_upload_dokumen_pendukung">Wajib Upload Dokumen Pendukung</string>
    <string name="siklus_pendapatan_placeholder">%1$d %2$s</string>
    <string-array name="siklus_pendapatan">
        <item>Minggu</item>
        <item>Bulan</item>
        <item>Tahun</item>
    </string-array>
    <string name="informasi_kelompok">Informasi Kelompok</string>
    <string name="nama_kps">Nama Kelompok</string>
    <string name="dasar_persetujuan_penetapan_perjanjian">Dasar persetujuan/penetapan/perjanjian akses kawasan</string>
    <string name="masukkan_dasar_persetujuan_penetapan_perjanjian">Masukkan dasar persetujuan/penetapan/perjanjian akses kawasan</string>
    <string name="nama_kups_jika_ada">Nama KUPS (Jika Ada)</string>
    <string name="masukkan_nama_kups">Masukkan nama KUPS</string>
    <string name="dasar_pembentukan_no_izin_kups">Dasar Pembentukan/No Izin KUPS (jika Ada)</string>
    <string name="masukkan_dasar_pembentukan_no_izin">Masukkan dasar pembentukan/No Izin</string>
    <string name="tanggal_dan_tahun_berdiri">Tanggal dan tahun berdiri</string>
    <string name="pilih_tanggal_dan_tahun_berdiri">Pilih tanggal dan tahun berdiri</string>
    <string name="fungsi_kawasan"><![CDATA[Fungsi Kawasan & Skema BPS]]></string>
    <string name="pilih_fungsi_kawasan"><![CDATA[Pilih fungsi kawasan & skema PS]]></string>
    <string name="text_sebelumnya">Sebelumnya</string>
    <string name="hint_nama_narahubung">Masukkan nama narahubung</string>
    <string name="nik_narahubung">NIK Narahubung</string>
    <string name="hint_nik_narahubung">Masukkan NIK narahubung</string>
    <string name="text_email_narahubung">Email Narahubung</string>
    <string name="hint_email_narahubung">Masukkan email narahubung</string>
    <string name="hint_jabatan">Masukkan jabatan</string>
    <string name="hint_telepon">Masukkan telepon</string>
</resources>