<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/base_margin_medium">

            <TextView
                style="@style/TextSM.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_narahubung"
                android:layout_marginHorizontal="@dimen/base_margin_medium"
                android:layout_marginTop="@dimen/base_margin_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nama_narahubung"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_small"
                app:errorTextAppearance="@style/ErrorText"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_narahubung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nama_narahubung"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextSM.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nik_narahubung"
                android:layout_marginHorizontal="@dimen/base_margin_medium"
                android:layout_marginTop="@dimen/base_margin_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nik_narahubung"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_small"
                app:errorTextAppearance="@style/ErrorText"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama_kps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nik_narahubung"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="16"
                    android:inputType="number"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextSM.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email_narahubung"
                android:layout_marginHorizontal="@dimen/base_margin_medium"
                android:layout_marginTop="@dimen/base_margin_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_small"
                app:errorTextAppearance="@style/ErrorText"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_narahubung"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextSM.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jabatan"
                android:layout_marginHorizontal="@dimen/base_margin_medium"
                android:layout_marginTop="@dimen/base_margin_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_jabatan"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_small"
                app:errorTextAppearance="@style/ErrorText"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_jabatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_jabatan"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextSM.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telepon"
                android:layout_marginHorizontal="@dimen/base_margin_medium"
                android:layout_marginTop="@dimen/base_margin_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_telepon"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_small"
                app:errorTextAppearance="@style/ErrorText"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_telepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telepon"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:inputType="phone"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/base_margin_mini"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/base_margin_medium"
        android:paddingTop="@dimen/base_margin_medium"
        android:paddingBottom="@dimen/base_margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_back"
            style="@style/FdbButton.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/base_margin_small"
            android:text="@string/text_sebelumnya" />

        <Button
            android:id="@+id/btn_next"
            style="@style/FdbButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/base_margin_small"
            android:text="@string/selanjutnya" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
